--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "scripts": {
     "develop": "gatsby develop",
-    "develop-clean": "gatsby clean && gatsby develop",
+    "clean": "gatsby clean",
     "build": "gatsby build",
+    "clean-develop": "gatsby clean && gatsby develop",
     "clean-build": "gatsby clean && gatsby build",
     "start": "npm run develop",
     "serve": "gatsby serve"
@@ -23,10 +24,9 @@
     "gatsby": "2.17.2",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-chakra-ui": "^0.1.0",
-    "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-sharp": "2.2.32",
     "gatsby-source-filesystem": "^2.1.39",
-    "gatsby-source-wordpress-experimental": "0.0.0--alpha.1",
+    "gatsby-source-wordpress-experimental": "0.0.0--alpha.1-dev-1580452781874",
     "gatsby-transformer-sharp": "2.3.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
