--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@chakra-ui/core": "^0.5.2",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
     "gatsby": "2.19.10",
     "gatsby-image": "^2.2.39",
@@ -27,7 +28,7 @@
     "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-sharp": "2.4.4",
     "gatsby-source-filesystem": "^2.1.47",
-    "gatsby-source-wordpress-experimental": "0.0.0--alpha.3",
+    "gatsby-source-wordpress-experimental": "0.0.0--alpha.5",
     "gatsby-transformer-sharp": "2.3.13",
     "parse-path": "^4.0.1",
     "react": "^16.3.2",
