--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-sharp": "2.4.4",
     "gatsby-source-filesystem": "^2.1.47",
-    "gatsby-source-wordpress-experimental": "0.0.0--alpha.6",
+    "gatsby-source-wordpress-experimental": "0.0.0--alpha.7",
     "gatsby-transformer-sharp": "2.3.13",
     "parse-path": "^4.0.1",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-paginate": "^6.3.2"
   },
   "devDependencies": {
     "prettier": "^1.13.7"
