--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "@emotion/styled": "^10.0.27",
     "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
-    "gatsby": "2.20.15",
+    "gatsby": "2.20.18",
     "gatsby-image": "^2.3.2",
     "gatsby-plugin-chakra-ui": "^0.1.4",
     "gatsby-plugin-netlify-cache": "^1.2.0",
+    "gatsby-plugin-notifications": "^0.0.2",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "2.5.4",
     "gatsby-source-filesystem": "^2.2.2",
-    "gatsby-source-wordpress-experimental": "0.0.28",
+    "gatsby-source-wordpress-experimental": "0.0.29",
     "gatsby-transformer-sharp": "2.4.4",
     "parse-path": "^4.0.1",
     "react": "^16.13.1",
