--- a/package.json
+++ b/package.json
@@ -18,23 +18,22 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "gatsby": "2.20.18",
-    "gatsby-image": "^2.3.2",
+    "gatsby": "^2.20.29",
+    "gatsby-image": "^2.3.4",
     "gatsby-plugin-chakra-ui": "^0.1.4",
     "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-notifications": "^0.0.2",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "2.5.4",
-    "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-plugin-sharp": "^2.5.6",
+    "gatsby-source-filesystem": "^2.2.4",
     "gatsby-source-wordpress-experimental": "0.0.31",
-    "gatsby-transformer-sharp": "2.4.4",
+    "gatsby-transformer-sharp": "^2.4.6",
     "gatsby-wordpress-experimental-inline-images": "^0.0.3",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0",
-    "react-paginate": "^6.3.2"
+    "react-helmet": "^6.0.0"
   },
   "devDependencies": {
     "prettier": "^1.13.7"
