--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "develop": "gatsby develop",
     "clean": "gatsby clean",
     "build": "gatsby build",
+    "build:time": "/usr/bin/time -o tests/build-time.txt gatsby build && cat tests/build-time.txt",
+    "calc": "node calculate.js",
     "cdev": "gatsby clean && gatsby develop",
     "cbuild": "gatsby clean && gatsby build",
     "start": "npm run develop",
@@ -36,6 +38,7 @@
     "react-helmet": "^6.0.0"
   },
   "devDependencies": {
+    "glob": "^7.1.6",
     "prettier": "^2.0.5"
   }
 }
