--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "develop": "gatsby develop",
     "clean": "gatsby clean",
-    "build": "gatsby build",
-    "build:time": "/usr/bin/time -f 'real %e | stime %S | utime %U' -a -o tests/build-time.txt gatsby build && cat tests/build-time.txt",
+    "build": "NODE_OPTIONS='--require \"./tests/profiling.js\"' gatsby build",
+    "build:time": "/usr/bin/time -f '%e;%U;%S' -a -o /home/kamalogic/test/results/gatsby_build_times.csv gatsby build && cat /home/kamalogic/test/results/gatsby_build_times.csv",
     "calc": "node calculate.js",
     "cdev": "gatsby clean && gatsby develop",
     "cbuild": "gatsby clean && gatsby build",
