--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gatsby-source-wordpress-experimental",
-  "description": "Gatsby example site using gatsby-source-wordpress@next",
-  "license": "MIT",
+  "name": "gatsby-starter-wordpress-twenty-twenty",
+  "description": "Gatsby port of the WordPress Twenty Twenty theme.",
+  "license": "SEE LICENSE IN <LICENSE>",
   "version": "0.0.1",
   "author": {
-    "name": "Tyler",
-    "email": "tyler@gatsbyjs.com"
+    "name": "Henrik Wirth",
+    "email": "info@henrikwirth.de"
   },
   "scripts": {
     "develop": "gatsby develop",
@@ -18,20 +18,19 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "gatsby": "^2.22.10",
-    "gatsby-image": "^2.4.5",
-    "gatsby-plugin-chakra-ui": "^0.1.4",
+    "gatsby": "^2.24.47",
+    "gatsby-image": "^2.4.16",
     "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-notifications": "^0.0.2",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.6.9",
-    "gatsby-source-filesystem": "^2.3.8",
-    "gatsby-source-wordpress-experimental": "^0.7.1",
-    "gatsby-transformer-sharp": "^2.5.3",
+    "gatsby-plugin-sharp": "^2.6.27",
+    "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-source-wordpress-experimental": "^1.3.6",
+    "gatsby-transformer-sharp": "^2.5.13",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "^2.0.5"
