--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "gatsby-wordpress",
-  "description": "Gatsby port of the WordPress Twenty Twenty theme.",
+  "description": "Custom Gatsby port of the WordPress Twenty Twenty theme.",
   "license": "SEE LICENSE IN <LICENSE>",
   "version": "0.0.1",
   "author": {
-    "name": "Henrik Wirth",
-    "email": "info@henrikwirth.de"
+    "name": "David Sapp",
+    "email": "david@mobius.digital"
   },
   "scripts": {
     "develop": "gatsby develop",
@@ -39,10 +39,17 @@
 =======
     "gatsby": "^2.24.47",
     "gatsby-image": "^2.4.16",
+    "gatsby-plugin-catch-links": "^2.5.0",
+    "gatsby-plugin-emotion": "^4.5.0",
+    "gatsby-plugin-manifest": "^2.7.0",
     "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-notifications": "^0.0.2",
+    "gatsby-plugin-offline": "^3.5.0",
+    "gatsby-plugin-react-helmet": "^3.5.0",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.6.27",
+    "gatsby-plugin-sitemap": "^2.7.0",
+    "gatsby-plugin-typography": "^2.7.0",
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-source-wordpress": "^3.6.0",
     "gatsby-source-wordpress-experimental": "^1.3.6",
