--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-catch-links": "^2.5.0",
     "gatsby-plugin-emotion": "^4.5.0",
+    "gatsby-plugin-google-analytics": "^2.6.0",
     "gatsby-plugin-manifest": "^2.7.0",
     "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-notifications": "^0.0.2",
@@ -53,6 +54,7 @@
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-source-wordpress": "^3.6.0",
     "gatsby-source-wordpress-experimental": "^1.3.6",
+    "gatsby-theme-wordpress-gutenberg": "^0.1.0",
     "gatsby-transformer-sharp": "^2.5.13",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
