--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "gatsby-wordpress",
-  "description": "Custom Gatsby port of the WordPress Twenty Twenty theme.",
-  "license": "SEE LICENSE IN <LICENSE>",
+  "description": "Gatsby port of the WordPress Twenty Twenty theme.",
+  "license": "SEE LICENSE",
   "version": "0.0.1",
   "author": {
-    "name": "David Sapp",
-    "email": "david@mobius.digital"
+    "name": "Henrik Wirth",
+    "email": "info@henrikwirth.de"
   },
   "scripts": {
     "develop": "gatsby develop",
@@ -19,7 +19,6 @@
   "dependencies": {
     "cache-manager-fs-hash": "^0.0.9",
     "dotenv": "^8.2.0",
-<<<<<<< HEAD
     "gatsby": "^2.32.3",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-netlify-cache": "^1.2.0",
@@ -36,33 +35,5 @@
   },
   "devDependencies": {
     "prettier": "^2.2.1"
-=======
-    "gatsby": "^2.24.47",
-    "gatsby-image": "^2.4.16",
-    "gatsby-plugin-catch-links": "^2.5.0",
-    "gatsby-plugin-emotion": "^4.5.0",
-    "gatsby-plugin-google-analytics": "^2.6.0",
-    "gatsby-plugin-manifest": "^2.7.0",
-    "gatsby-plugin-netlify-cache": "^1.2.0",
-    "gatsby-plugin-notifications": "^0.0.2",
-    "gatsby-plugin-offline": "^3.5.0",
-    "gatsby-plugin-react-helmet": "^3.5.0",
-    "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.6.27",
-    "gatsby-plugin-sitemap": "^2.7.0",
-    "gatsby-plugin-typography": "^2.7.0",
-    "gatsby-source-filesystem": "^2.3.24",
-    "gatsby-source-wordpress": "^3.6.0",
-    "gatsby-source-wordpress-experimental": "^1.3.6",
-    "gatsby-theme-wordpress-gutenberg": "^0.1.0",
-    "gatsby-transformer-sharp": "^2.5.13",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0"
-  },
-  "devDependencies": {
-    "prettier": "^2.0.5"
->>>>>>> Initial commit from gatsby: (https://github.com/henrikwirth/gatsby-starter-wordpress-twenty-twenty.git)
   }
 }
