--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "gatsby": "^2.24.47",
-    "gatsby-image": "^2.4.16",
+    "gatsby": "^2.32.3",
+    "gatsby-image": "^2.11.0",
     "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-notifications": "^0.0.2",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.6.27",
-    "gatsby-source-filesystem": "^2.3.24",
-    "gatsby-source-wordpress-experimental": "^1.3.6",
+    "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-source-wordpress": "^4.0.1",
     "gatsby-transformer-sharp": "^2.5.13",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
