--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "gatsby": "^3.0.3",
-    "gatsby-image": "^3.0.0",
+    "gatsby": "^3.3.1",
+    "gatsby-plugin-image": "^1.3.1",
     "gatsby-plugin-notifications": "^0.0.2",
-    "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^3.0.0",
-    "gatsby-source-filesystem": "^3.0.0",
-    "gatsby-source-wordpress": "^5.1.0",
-    "gatsby-transformer-sharp": "^3.0.0",
+    "gatsby-plugin-react-svg": "^3.0.1",
+    "gatsby-plugin-sharp": "^3.3.1",
+    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-source-wordpress": "^5.3.1",
+    "gatsby-transformer-sharp": "^3.3.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
