Adds Seo images and urls, canonicals

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # WPGraphQL
 WPGRAPHQL_URL=https://your-domain.example/graphql
-WP_BASE_URL=your-domain.example
+
+# Add your siteUrl without ending slash. It is used for SEO images and should be your frontend domain.
+# Example: https://gatsby-starter-wordpress-twenty-twenty.netlify.app
+SITE_URL=https://your-frontend-domain.example
 
 # Gatsby
 GATSBY_CONCURRENT_DOWNLOAD=200
