Cookie Consent Banner and Google Analytics & Tag Manager Integration
Added Dependencies:
- gatsby-plugin-gdpr-cookies
- react-cookie-consent

Edit gatsby-config.js for tracking codes.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^9.0.2",
     "gatsby": "^3.5.0",
+    "gatsby-plugin-gdpr-cookies": "^2.0.1",
     "gatsby-plugin-image": "^1.5.0",
     "gatsby-plugin-notifications": "^0.0.2",
     "gatsby-plugin-react-svg": "^3.0.1",
@@ -28,6 +29,7 @@
     "gatsby-transformer-sharp": "^3.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-cookie-consent": "^6.2.4",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
   },
